--- a/website/style.css
+++ b/website/style.css
@@ -5,8 +5,11 @@
 }
 
 .body{  
-  
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #3E3D49;
+  height: 200%;
 }
 
 .titel{
@@ -22,24 +25,34 @@ main{
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
-    background: white;
+    background: #3E3D49;
     
 
 }
 .uitleg{
-    display:flex ;
+    position: relative;
     background: #D1D3E0;
     flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
 
 }
 
-p{
-   font-size: 50px;
+.uitlegtitle{
+    position: absolute;
+    top: 0;
+    font-size: 45px;
+} 
+
+.uitlegtext{
+   font-size: 25px;
 }
 
 .test{
     padding: 20px;
-    height: 100px;
+    object-fit: contain;
 }
-
-
