--- a/niew/css/style.css
+++ b/niew/css/style.css
@@ -67,7 +67,7 @@ h1{
 
 
 main{
-    height: 1865px;
+    height: 2300px;
     width: 100%;
     background: #454452;
     padding-left: 45px;
@@ -77,7 +77,7 @@ main{
 }
 
 section{
-    width: 1809px;
+    width: 1429.2px;
     height: 407px;
     background: #D1D3E0;
     margin-top: 45px;
@@ -108,11 +108,18 @@ section3{
 }
 
 section4{
-    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(58, 129, 0);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 5px solid black;
     width: 1809px;
-    height: 600px;
-    background: white;
     margin-top: 45px;
+    height: 50%;
 }
  
 
@@ -157,6 +164,63 @@ footer > p{
     margin: 0 auto;
     padding-left: 40px;
 }
+
+.score{
+    font-size: 4em;
+    margin-bottom: .5em;
+}
+.board{
+    height: 600px;
+    width: 600px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 80px;
+}
+.hole{
+    background-color: rgb(165, 85, 11);
+    border-radius: 50%;
+    box-shadow: inset 0 10px 0 7px rgb(53, 21, 6),
+                inset 0 20px 20px 15px rgba(0, 0, 0, .3),
+                0 0 5px rgba(0, 0, 0, .5);
+    position: relative;
+    overflow: hidden;
+}
+.hole .mole{
+    width: 70%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    animation: rise .3s ease-out;
+}
+
+
+.cursor{
+    height: 110px;
+    width: 100px;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    background-image: url('assets/boris.jpg');
+    background-size: 100% 100%;
+    transform: translate(-20%, -20%);
+    transition: transform .1s;
+    pointer-events: none;
+}
+.cursor.active{
+    transform: translate(-20%, -20%) rotate(-45deg);
+}
+
+@keyframes rise {
+    0%{
+        transform: translateX(-50%) translateY(100%);
+    }
+    100%{
+        transform: translateX(-50%) translateY(0);
+    }
+}
+
 
 
 @media screen and (max-width:1000px) {
