--- a/website/css/style.css
+++ b/website/css/style.css
@@ -20,15 +20,18 @@ header{
     height: 120px;
 }
 
-li > img{
+.logo{
+    float: left;
+    margin: 10px;
+    height: 100px;
     width: 100px;
-    box-sizing: inherit;
-    display: flex;
-
 }
+
+
 
 li > a{
     color: white;
+    text-decoration:none;
 
 }
 
@@ -77,7 +80,7 @@ main{
 }
 
 section{
-    width: 1429.2px;
+    width: 100%;
     height: 407px;
     background: #D1D3E0;
     margin-top: 45px;
@@ -117,11 +120,15 @@ section4{
     align-items: center;
     overflow: hidden;
     border: 5px solid black;
-    width: 1809px;
+    width: 100%;
     margin-top: 45px;
     height: 50%;
+    
 }
  
+section4:hover{
+    cursor: url("assets/boris.jpg");
+}
 
 img:hover{
     transform: scale(1.05);
