--- a/website/css/style.css
+++ b/website/css/style.css
@@ -28,13 +28,11 @@ header{
 }
 
 li{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: 120px;
     
 }
 
@@ -70,13 +68,6 @@ li:hover{
     cursor: pointer;
     
 }
-
-h1{
-    font-size: 250%;
-    margin: 5px;
-    border-bottom:2px solid rgb(0, 0, 0);
-}
-
 
 main{
     height: 2300px;
@@ -159,7 +150,16 @@ section4{
     
 }
 
-
+h1{
+    font-size: 250%;
+    display: flex;
+    justify-content: center;
+    margin-left: 45px;
+    margin-right: 45px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid rgb(75, 75, 75);
+    
+}
 
 p{
     margin: 40px;
