--- a/website/css/style.css
+++ b/website/css/style.css
@@ -89,14 +89,14 @@ section{
 
 section1{
     height: 702px;
-    width: 536px;
+    width: 100vw;
     background: #D1D3E0;
     margin-right: 109px;
     margin-top: 109px;
 }
 
 section1 > img{
-    width: 476px;
+    width: 100%;
     height: 262px;
     margin-top: 30px;
     margin-left: 30px;
@@ -105,14 +105,14 @@ section1 > img{
 
 section2{
     height: 702px;
-    width: 536px;
+    width: 100vw;
     background: #D1D3E0;
     margin-right: 109px;
     margin-top: 109px;
 }
 
 section2 > img{
-    width: 476px;
+    width: 90vw;
     height: 262px;
     margin-top: 30px;
     margin-left: 30px;
@@ -121,14 +121,14 @@ section2 > img{
 
 section3{
     height: 702px;
-    width: 536px;
+    width: 100vw;
     background: #D1D3E0;
     margin-top: 109px;
 }
 
 section3 > img{
-    width: 476px;
-    height: 262px;
+    width: 75%;
+    height: 12vw;
     margin-top: 30px;
     margin-left: 30px;
     margin-right: 30px;
