--- a/website/css/style.css
+++ b/website/css/style.css
@@ -39,7 +39,11 @@ li{
 li > a{
     color: white;
     text-decoration:none;
-
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav{
@@ -79,6 +83,14 @@ main{
     border-top: white 10px;
 }
 
+.geschiedenis{
+    height: 2025px;
+    background-image: linear-gradient(rgba(15, 4, 67, 0.547), rgba(15, 4, 67, 0.547)), url("https://i.pinimg.com/originals/86/a6/08/86a608e4be2a6ffe64cfcabb4691b0d0.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+
 section{
     width: 100%;
     height: 407px;
@@ -87,56 +99,60 @@ section{
 
 }
 
+.image{
+    width: auto;
+    height: auto;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+h1{
+    font-size: 250%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-left: 45px;
+    margin-right: 45px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid rgb(75, 75, 75);
+}
+
+.info{
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: auto;
+    margin-bottom: 40px;
+    font-size: 25px;
+}
+
 section1{
-    height: 702px;
-    width: 100vw;
+    height: auto;
+    width: 100%;
     background: #D1D3E0;
     margin-right: 109px;
     margin-top: 109px;
 }
 
-section1 > img{
-    width: 100%;
-    height: 262px;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
 
 section2{
-    height: 702px;
-    width: 100vw;
+    height: auto;
+    width: 100%;
     background: #D1D3E0;
     margin-right: 109px;
     margin-top: 109px;
-}
-
-section2 > img{
-    width: 90vw;
-    height: 262px;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 section3{
-    height: 702px;
-    width: 100vw;
+    height: auto;
+    width: 100%;
     background: #D1D3E0;
     margin-top: 109px;
-}
-
-section3 > img{
-    width: 75%;
-    height: 12vw;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 section4{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(58, 129, 0);
+    background-color: rgb(0, 95, 129);
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -149,24 +165,25 @@ section4{
     height: 50%;
     
 }
-
-h1{
-    font-size: 250%;
+ 
+topp{
+    width: 80px;
+    height: 80px;
+    background: rgb(42, 40, 45);
+    border: none;
+    font-size: 150%;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 5px;
+    color: white;
+    position: fixed;
+    bottom: 120px;
+    right: 120px;
+    text-decoration: none;
     display: flex;
     justify-content: center;
-    margin-left: 45px;
-    margin-right: 45px;
-    padding-bottom: 10px;
-    border-bottom: 2px solid rgb(75, 75, 75);
-    
+    align-items: center;
 }
 
-p{
-    margin: 40px;
-}
- 
-
- 
 .top{
     width: 80px;
     height: 80px;
@@ -199,6 +216,21 @@ footer > p{
     padding-left: 40px;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+section4{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(58, 129, 0);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 .score{
     font-size: 4em;
     margin-bottom: .5em;
@@ -228,7 +260,14 @@ footer > p{
     bottom: 0;
     animation: rise .3s ease-out;
 }
-
+@keyframes rise {
+    0%{
+        transform: translateX(-50%) translateY(100%);
+    }
+    100%{
+        transform: translateX(-50%) translateY(0);
+    }
+}
 
 .cursor{
     height: 110px;
@@ -236,12 +275,14 @@ footer > p{
     position: absolute;
     top: 100px;
     left: 100px;
-    background-image: url('assets/boris.jpg');
+    background-image: url('assets/hammer.png');
     background-size: 100% 100%;
     transform: translate(-20%, -20%);
     transition: transform .1s;
     pointer-events: none;
 }
+
+
 .cursor.active{
     transform: translate(-20%, -20%) rotate(-45deg);
 }
