--- a/website/css/style.css
+++ b/website/css/style.css
@@ -87,7 +87,8 @@ main{
     height: 2025px;
     background-image: linear-gradient(rgba(15, 4, 67, 0.547), rgba(15, 4, 67, 0.547)), url("https://i.pinimg.com/originals/86/a6/08/86a608e4be2a6ffe64cfcabb4691b0d0.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    
 }
 
 
@@ -129,30 +130,36 @@ h1{
 section1{
     height: auto;
     width: 100%;
+    margin-top: 30px;
+    display: flex;
+    justify-content: left;
     background: #D1D3E0;
-    margin-right: 109px;
-    margin-top: 109px;
 }
 
 
 section2{
     height: auto;
     width: 100%;
+    margin-top: 30px;
+    margin-right: 50px;
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
     background: #D1D3E0;
-    margin-right: 109px;
-    margin-top: 109px;
 }
 
 section3{
     height: auto;
     width: 100%;
+    margin-top: 30px;
     background: #D1D3E0;
-    margin-top: 109px;
+    display: flex;
+    justify-content: right;
 }
 
 section4{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(0, 95, 129);
+    background-color: rgb(21, 82, 104);
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -164,24 +171,6 @@ section4{
     margin-top: 45px;
     height: 50%;
     
-}
- 
-topp{
-    width: 80px;
-    height: 80px;
-    background: rgb(42, 40, 45);
-    border: none;
-    font-size: 150%;
-    font-family: 'Open Sans', sans-serif;
-    border-radius: 5px;
-    color: white;
-    position: fixed;
-    bottom: 120px;
-    right: 120px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .top{
