--- a/website/css/style.css
+++ b/website/css/style.css
@@ -101,16 +101,15 @@ section{
 }
 
 .image{
-    width: auto;
-    height: auto;
+    width: 24vw;
+    height: 200px;
     margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 3vw;
+    margin-right: 3vw;
 }
 
 h1{
     font-size: 250%;
-    display: flex;
     justify-content: center;
     margin-top: 10px;
     margin-left: 45px;
@@ -128,32 +127,29 @@ h1{
 }
 
 section1{
-    height: auto;
-    width: 100%;
+    height: 700px;
+    width: 30vw;
     margin-top: 30px;
-    display: flex;
     justify-content: left;
     background: #D1D3E0;
 }
 
 
 section2{
-    height: auto;
-    width: 100%;
+    height: 700px;
+    width: 30vw;
     margin-top: 30px;
     margin-right: 50px;
     margin-left: 50px;
-    display: flex;
     justify-content: center;
     background: #D1D3E0;
 }
 
 section3{
-    height: auto;
-    width: 100%;
+    height: 700px;
+    width: 30vw;
     margin-top: 30px;
     background: #D1D3E0;
-    display: flex;
     justify-content: right;
 }
 
