--- a/website/css/style.css
+++ b/website/css/style.css
@@ -14,6 +14,17 @@ body{
     background: #3E3D49;
 }
 
+main{
+    height: auto;
+    width: 100%;
+    background: #454452;
+    padding: 3rem;
+}
+
+
+
+/* || Header */
+
 header{
     background: #272635;
     color: rgb(255, 255, 255);
@@ -67,12 +78,7 @@ li:hover{
     
 }
 
-main{
-    height: auto;
-    width: 100%;
-    background: #454452;
-    padding: 3rem;
-}
+/* … */
 
 
 
@@ -81,6 +87,9 @@ main{
 
 
 
+
+
+/* Sectie 1 */
 
 #section1{
     width: 100%;
@@ -117,6 +126,7 @@ h1{
     font-size: 33px;
 }
 
+/* … */
 
 
 
@@ -124,6 +134,7 @@ h1{
 
 
 
+/* sectie 2 */
 
 #section2{
     width: 100%;
@@ -180,11 +191,188 @@ h2{
     font-size: 24px;
 }
 
+/* … */
+
+
+
+
+/* Parallax base styles
+  --------------------------------------------- */
+
+  main, footer{
+    height: 500px; /* fallback for older browsers */
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 300px;
+    perspective: 300px;
+  }
+
+  .parallax {
+    height: 500px; /* fallback for older browsers */
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 300px;
+    perspective: 300px;
+  }
+
+  .parallax__group {
+    position: relative;
+    height: 500px; /* fallback for older browsers */
+    height: 100vh;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+
+  .parallax__layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .parallax__layer--fore {
+    -webkit-transform: translateZ(90px) scale(.7);
+    transform: translateZ(90px) scale(.7);
+    z-index: 1;
+  }
+
+  .parallax__layer--base {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    z-index: 4;
+  }
+
+  .parallax__layer--back {
+    -webkit-transform: translateZ(-300px) scale(2);
+    transform: translateZ(-300px) scale(2);
+    z-index: 3;
+  }
+
+  .parallax__layer--deep {
+    -webkit-transform: translateZ(-600px) scale(3);
+    transform: translateZ(-600px) scale(3);
+    z-index: 2;
+  }
+
+
+  /* demo styles
+  --------------------------------------------- */
+
+  body, html {
+    overflow: hidden;
+  }
+
+  body {
+    font: 100% / 1.5 Arial;
+  }
+
+  * {
+    margin:0;
+    padding:0;
+  }
+
+  .parallax {
+    font-size: 200%;
+  }
+
+   /* centre the content in the parallax layers */
+  .title {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 20vw;
+    height: 20vw;
+    flex-direction: column;
+    background: #D1D3E0;
+    padding: 2rem;
+  }
+
+  .titles {
+    color: white;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+
+  /* style the groups
+  --------------------------------------------- */
+
+  #group1 {
+    z-index: 5; /* slide over group 2 */
+  }
+  #group1 .parallax__layer--base {
+    background-image: url(https://thereader.mitpress.mit.edu/wp-content/uploads/2020/11/pacman-lead-graphic-700x420.jpg);
+    background-size: cover;
+  }
+
+  #group2 {
+    z-index: 3; /* slide under groups 1 and 3 */
+  }
+  #group2 .parallax__layer--back {
+    background-image: url(https://as1.ftcdn.net/v2/jpg/03/06/59/52/1000_F_306595210_sTtKiI1G7Ulo8q3OfAXpKvMrDXOEb8eJ.jpg);
+    background-size: cover;
+  }
+
+  #group3 {
+    z-index: 4; /* slide over group 2 and 4 */
+  }
+  #group3 .parallax__layer--base {
+    background-image: url(https://www.siliconindia.com/news/newsimages/special/y7xs21Jh.jpeg);
+    background-size: cover;
+  }
+
+  #group4 {
+    z-index: 2; /* slide under group 3 and 5 */
+  }
+  #group4 .parallax__layer--deep {
+    background-image: url(https://www.svg.com/img/gallery/sonic-the-hedgehogs-first-home-console-appearance-you-probably-missed-upgrade/a-new-mascot-awaits-1512057692.jpg);
+    background-size: cover;
+  }
+
+  #group5 {
+    z-index: 3; /* slide over group 4 and 6 */
+  }
+  #group5 .parallax__layer--base {
+    background-image: url(https://i.pinimg.com/564x/9b/bc/90/9bbc902053250e7a86d17902ba65ab4e.jpg);
+    background-size: cover;
+  }
+
+  #group6 {
+    z-index: 2; /* slide under group 5 and 7 */
+  }
+  #group6 .parallax__layer--back {
+    background-image: url(https://i0.wp.com/tiredoldhack.com/wp-content/uploads/2018/05/01-sf1.png?ssl=1);
+    background-size: cover;
+  }
+
+  #group7 {
+    z-index: 3; /* slide over group 7 */
+  }
+  #group7 .parallax__layer--base {
+    background-image: url(https://cdn.pastemagazine.com/www/articles/2021/05/26/1981_games.jpg);
+    background-size: cover;
+  }
 
 
 
 
 
+
+
+
+
+
+/* footer */
 
 footer{
     background: #272635;
@@ -194,6 +382,7 @@ footer{
     align-items: center;
 }
 
+/* … */
 
 
 
@@ -201,7 +390,9 @@ footer{
 
 
 
-@media screen and (max-width:192000px) {
+/* grote */
+
+@media screen and (max-width:1920px) {
     footer > p{
         width: 80vw;
     }
@@ -249,6 +440,7 @@ footer{
 
 }
 
+/* … */
 
 
 
@@ -259,14 +451,7 @@ footer{
 
 
 
-
-
-
-
-
-
-
-
+/* Game */
 
 #game{
     font-family: Arial, Helvetica, sans-serif;
@@ -351,6 +536,8 @@ footer{
         transform: translateX(-50%) translateY(0);
     }
 }
+
+/* … */
 
 
 
