--- a/website/css/style.css
+++ b/website/css/style.css
@@ -271,11 +271,43 @@ h2{
 
 footer{
     background: #272635;
-    color: rgb(255, 255, 255);
-    height: 720px;
+    height: 360px;
     display:flex;
-    align-items: center;
+    text-align: center;
+    
 }
+
+.zakelijkFooter{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: white;
+    margin-right: 200px;
+}
+
+.persFooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: green;
+    margin-right: 100px;
+}
+.infoFooter{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: antiquewhite;
+    margin-left: 150px;
+    
+}
+
+p{
+    display: flex;
+    justify-content: center;
+    
+}
+
+
 
 /* … */
 
@@ -373,89 +405,11 @@ footer{
 /* Game 
   --------------------------------------------- */
 
-.game{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(21, 82, 104);
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border: 5px solid black;
-    width: 100%;
-    margin-top: 3rem;
-    height: 100%;
-}
-
-.score{
-    font-size: 4em;
-    margin-bottom: .5em;
-}
-
-.board{
-    height: 600px;
-    width: 600px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 80px;
-    padding-bottom: 3rem;
-}
-
-.hole{
-    background-color: rgb(165, 85, 11);
-    border-radius: 50%;
-    box-shadow: inset 0 10px 0 7px rgb(53, 21, 6),
-                inset 0 20px 20px 15px rgba(0, 0, 0, .3),
-                0 0 5px rgba(0, 0, 0, .5);
-    position: relative;
-    overflow: hidden;
-}
-
-.hole .mole{
-    width: 70%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
-    animation: rise .3s ease-out;
-}
-
-@keyframes rise {
-    0%{
-        transform: translateX(-50%) translateY(100%);
+    .game{
+        width: 100%;
+        margin-top: 50px;
+        overflow: hidden;
     }
-    100%{
-        transform: translateX(-50%) translateY(0);
-    }
-}
-
-.cursor{
-    height: 110px;
-    width: 100px;
-    position: absolute;
-    top: 100px;
-    left: 100px;
-    background-image: url('assets/hammer.png');
-    background-size: 100% 100%;
-    transform: translate(-20%, -20%);
-    transition: transform .1s;
-    pointer-events: none;
-}
-
-.cursor.active{
-    transform: translate(-20%, -20%) rotate(-45deg);
-}
-
-@keyframes rise {
-    0%{
-        transform: translateX(-50%) translateY(100%);
-    }
-    100%{
-        transform: translateX(-50%) translateY(0);
-    }
-}
 
 /* … */
 
