--- a/website/css/style.css
+++ b/website/css/style.css
@@ -90,6 +90,7 @@ li:hover{
     font-size: 20px;
     font-family: sans-serif;
     background: #3E3D49;
+
 }
 
 #index{
@@ -235,59 +236,13 @@ h2{
 /* … */
 
 
-<<<<<<< HEAD
-
-
-/* footer */
-
-footer{
-    background: #272635;
-    height: 360px;
-    display:flex;
-    text-align: center;
-    
-}
-
-.zakelijkFooter{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: white;
-    margin-right: 200px;
-}
-
-.persFooter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: green;
-    margin-right: 100px;
-}
-.infoFooter{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: antiquewhite;
-    margin-left: 150px;
-    
-}
-
-p{
-    display: flex;
-    justify-content: center;
-    
-}
-
-
-
-/* … */
 
 
 
 
 
-=======
->>>>>>> c166a68dedd08c319a4a8ec26d3d20a630007ba2
+
+
 /* reviews */
 #bodyreviews{
     font-size: 20px;
@@ -414,13 +369,100 @@ h3{
 
 /* footer */
 
-footer{
-    background: #272635;
-    color: rgb(255, 255, 255);
-    height: 500px;
-    display:flex;
-    
+
+
+
+body{
+	line-height: 1.5;
+	font-family: 'Poppins', sans-serif;
 }
+
+.container{
+	max-width: 1170px;
+	margin:auto;
+}
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #24262b;
+    padding: 70px 0;
+}
+
+
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
+
 
 /* … */
 
