--- a/website/css/style.css
+++ b/website/css/style.css
@@ -66,7 +66,7 @@ nav{
     margin: 0 auto;
 }
 
-ul{
+.headerlist{
     display: flex;
     list-style: none;
     height: 100%;
@@ -141,6 +141,15 @@ h1{
     margin-right: 40px;
     margin-bottom: 40px;
     font-size: 33px;
+    position: absolute;
+    top: 35%;
+}
+
+.informatieKjell{
+    position: absolute;
+    font-size: 24px;
+    top: 50%;
+    right: 58%;
 }
 
 /* … */
@@ -405,6 +414,7 @@ ul{
 	margin-bottom: 35px;
 	font-weight: 500;
 	position: relative;
+    
 }
 .footer-col h4::before{
 	content: '';
@@ -414,7 +424,7 @@ ul{
 	background-color: #e91e63;
 	height: 2px;
 	box-sizing: border-box;
-	width: 50px;
+	width: 80px;
 }
 .footer-col ul li:not(:last-child){
 	margin-bottom: 10px;
@@ -429,6 +439,7 @@ ul{
 	display: block;
 	transition: all 0.3s ease;
 }
+
 .footer-col ul li a:hover{
 	color: #ffffff;
 	padding-left: 8px;
