--- a/website/css/style.css
+++ b/website/css/style.css
@@ -110,7 +110,7 @@ li:hover{
 
 #section1{
     width: 100%;
-    height: 407px;
+    height: auto;
     display: flex;
     background: #D1D3E0;
     padding: 2rem;
@@ -123,7 +123,7 @@ li:hover{
 }
 
 .image1{
-    height: 100%;
+    height: 343px;
     width: auto;
 }
 
@@ -139,7 +139,6 @@ h1{
     margin-top: 20px;
     margin-left: 40px;
     margin-right: 40px;
-    margin-bottom: 40px;
     font-size: 33px;
 }
 
