--- a/website/css/style.css
+++ b/website/css/style.css
@@ -218,17 +218,43 @@ h2{
     font-size: 20px;
     font-family: sans-serif;
     background-size: cover;
-    text-align: center;
+    
     background: #3E3D49;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-#contact{
+.contact{
     height: auto;
     width: 100%;
+    height: 1500px;
     padding: 3rem;
+    background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ), url(https://i.pinimg.com/564x/9b/bc/90/9bbc902053250e7a86d17902ba65ab4e.jpg);
+    
+}
+
+.contact1{
+    width: 600px;
+    height: 1400px;
+    background: rgba(255, 255, 255, 0.8);
+
+}
+
+.contactH2{
+    padding-top: 50px;
+    padding-left: 150px;
+    padding-bottom: 50px;
+    font-size: 50px;
+
+}
+
+.footerContact{
+   
+        background-color: #24262b;
+        padding: 70px 0;
+        margin-top: 50px;
+        
 }
 /* … */
 
@@ -241,22 +267,45 @@ h2{
 
 
 /* reviews */
-#bodyreviews{
-    font-size: 20px;
-    font-family: sans-serif;
-    background-size: cover;
-    text-align: center;
-    background: #3E3D49;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-#reviews{
-    height: auto;
+.index{
+    height: 2000px;
     width: 100%;
+    background: #454452;
     padding: 3rem;
 }
+
+.review1{
+    width: 900px;
+    height: 500px;
+    background: #24262b;
+}
+
+.line1{
+    width: 2px;
+    height: 70%;
+    background: green;
+    position: absolute;
+    left: 29.5%;
+    
+}
+.review2{
+    width: 900px;
+    height: 500px;
+    background: #24262b;
+    position: absolute;
+    left: 30%;
+    margin-top: 50px;
+}
+.line2{
+    width: 2px;
+    height: 100%;
+    background: green;
+    position: absolute;
+    left: 40%;
+    
+}
+
+
 /* … */
 
 
