--- a/website/css/style.css
+++ b/website/css/style.css
@@ -218,8 +218,7 @@ h2{
     font-size: 20px;
     font-family: sans-serif;
     background-size: cover;
-    
-    background: #3E3D49;
+    background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ), url(https://i.pinimg.com/564x/9b/bc/90/9bbc902053250e7a86d17902ba65ab4e.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -230,7 +229,6 @@ h2{
     width: 100%;
     height: 1500px;
     padding: 3rem;
-    background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ), url(https://i.pinimg.com/564x/9b/bc/90/9bbc902053250e7a86d17902ba65ab4e.jpg);
     
 }
 
@@ -272,26 +270,28 @@ h2{
     width: 100%;
     background: #454452;
     padding: 3rem;
+    background-image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ), url(https://nl.letsgodigital.org/uploads/2018/06/nationaal-videogame-museum-1024x676.jpg);
 }
 
 .review1{
     width: 900px;
     height: 500px;
-    background: #24262b;
+    background: rgba(255, 255, 255, 0.5);
+
 }
 
 .line1{
     width: 2px;
-    height: 70%;
+    height: 63%;
     background: green;
     position: absolute;
-    left: 29.5%;
+    left: 27.5%;
     
 }
 .review2{
     width: 900px;
     height: 500px;
-    background: #24262b;
+    background: rgba(255, 255, 255, 0.5);
     position: absolute;
     left: 30%;
     margin-top: 50px;
@@ -303,6 +303,25 @@ h2{
     position: absolute;
     left: 40%;
     
+}
+
+.review3{
+    width: 900px;
+    height: 500px;
+    background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    left: 0%;
+    top: 165%;
+    margin-top: 100px;
+    margin-left: 50px;
+}
+
+.line3{
+    width: 2px;
+    height: 100%;
+    background: green;
+    position: absolute;
+    left: 50%;
 }
 
 
